# gittasks

./: .gitignore  Cargo.toml  Project.md
.tasks/: add-integration-tests-001.md  add-priority-based-colouring-to-cli-text-row-outputs-005.md  publish-to-crates-io-004.md  setup-github-repository-003.md  write-documentation-002.md
src/: lib.rs  main.rs
src/cli/: commands.rs  display.rs  mod.rs
src/git/: mod.rs  operations.rs
src/mcp/: mod.rs  server.rs
src/models/: frontmatter.rs  mod.rs  task.rs
src/storage/: file_store.rs  id_generator.rs  location.rs  mod.rs  registry.rs
