[package]
name = "gittask"
version = "0.1.0"
edition = "2024"
description = "Git-versioned task management using Markdown files"
authors = ["awood"]

[[bin]]
name = "gittask"
path = "src/main.rs"

[[bin]]
name = "gittask-mcp"
path = "src/bin/gittask-mcp.rs"

[lib]
name = "gittask"
path = "src/lib.rs"

[dependencies]
git2 = "0.18"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tabled = "0.17"
dirs = "6.0"
slug = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.15"
